--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  googleapis: ^11.3.0
+  googleapis_auth: ^1.4.1
 
 dev_dependencies:
   flutter_test:
@@ -23,9 +25,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logger.json
 
   # fonts:
   #   - family: Schyler
